--- a/index.html
+++ b/index.html
@@ -48,5 +48,120 @@
     </div>
 </div>
     </header>
+
+    <section class="popular">
+        <div class="container popular-container">
+        <h2 class="popular-title">Most Popular Tools</h2>
+        <p class="popular-sub-title">Tools for the best Designers and Developers most popularly used in the world</p>
+
+        <ul class="app-list">
+            <li class="app-item">
+                <div class="app-info">
+                    <img class="app-icon" src="./imgs/figmaicon.png" alt="Figma">
+                    <div class="app-info-txt">
+                    <h3 class="app-name">FIGMA</h3>
+                    <p class="app-price">Free</p>
+                </div>
+                </div>
+                <p class="app-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="app-bottom">
+                    <div class="app-dop">
+                    <img class="app-favor" src="./imgs/favicon.svg" alt="like">
+                    <img class="app-add" src="./imgs/foldericon.svg" alt="archive">
+                    <p class="visit-app">Visit</p>
+                </div>
+                </div>
+            </li>
+            <li class="app-item">
+                <div class="app-info">
+                    <img class="app-icon" src="./imgs/sketchicon.png" alt="Sketch">
+                    <div class="app-info-txt">
+                    <h3 class="app-name">Sketch</h3>
+                    <p class="app-price">Trial & Paid</p>
+                    </div>  
+                </div>
+                <p class="app-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="app-bottom">
+                    <div class="app-dop">
+                    <img class="app-favor" src="./imgs/favicon.svg" alt="like">
+                    <img class="app-add" src="./imgs/foldericon.svg" alt="archive">
+                </div>
+                    <p class="visit-app">Visit</p>
+                </div>
+            </li>
+            <li class="app-item">
+                <div class="app-info">
+                    <img class="app-icon" src="./imgs/vscicon.png" alt="Visual Studio Code">
+                    <div class="app-info-txt">
+                    <h3 class="app-name">Visual Studio Code</h3>
+                    <p class="app-price">Free</p>
+                </div>
+                </div>
+                <p class="app-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="app-bottom">
+                    <div class="app-dop">
+                    <img class="app-favor" src="./imgs/favicon.svg" alt="like">
+                    <img class="app-add" src="./imgs/foldericon.svg" alt="archive">
+                </div>
+                    <p class="visit-app">Visit</p>
+                </div>
+            </li>
+            <li class="app-item">
+                <div class="app-info">
+                    <img class="app-icon" src="./imgs/notionicon.png" alt="Notion">
+                    <div class="app-info-txt">
+                    <h3 class="app-name">Notion</h3>
+                    <p class="app-price">Free & Paid</p>
+                    </div>
+                </div>
+                <p class="app-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="app-bottom">
+                    <div class="app-dop">
+                    <img class="app-favor" src="./imgs/favicon.svg" alt="like">
+                    <img class="app-add" src="./imgs/foldericon.svg" alt="archive">
+                </div>
+                    <p class="visit-app">Visit</p>
+                </div>
+            </li>
+            <li class="app-item">
+                <div class="app-info">
+                    <img class="app-icon" src="./imgs/slackicon.png" alt="Slack">
+                    <div class="app-info-txt">
+                    <h3 class="app-name">Slack</h3>
+                    <p class="app-price">Free & Paid</p>
+                    </div>
+                </div>
+                <p class="app-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="app-bottom">
+                    <div class="app-dop">
+                    <img class="app-favor" src="./imgs/favicon.svg" alt="like">
+                    <img class="app-add" src="./imgs/foldericon.svg" alt="archive">
+                </div>
+                    <p class="visit-app">Visit</p>
+                </div>
+            </li>
+            <li class="app-item">
+                <div class="app-info">
+                    <img class="app-icon" src="./imgs/invisionicon.png" alt="Invision">
+                    <div class="app-info-txt">
+                    <h3 class="app-name">Invision</h3>
+                    <p class="app-price">Free & Paid</p>
+                    </div>  
+                </div>
+                <p class="app-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="app-bottom">
+                    <div class="app-dop">
+                    <img class="app-favor" src="./imgs/favicon.svg" alt="like">
+                    <img class="app-add" src="./imgs/foldericon.svg" alt="archive">
+                </div>
+                    <p class="visit-app">Visit</p>
+                </div>
+            </li>
+        </ul>
+        <div class="pop-button">
+        <button class="popular-button" type="button">Load more</button>
+    </div>
+    </div>
+    </section>
 </body>
 </html>
